HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the ReturnTypeMismatch rejected-source specimen.

expectedDiagnostic("E-SEM-3161", "rule.18.Return-Type-Err")
